uwsgi (1.2.3+dfsg-2) UNRELEASED; urgency=low

  * New binary package uwsgi-plugin-php.
     - New Build-Depends libphp5-embed, php5-dev, libonig-dev, libdb-dev,
       libqdbm-dev and libbz2-dev. 
  * debian/pathces/fix-php-ldflags.patch
     - Include php5-embed ld library path when building PHP plugin.

 -- Janos Guljas <janos@resenje.org>  Mon, 21 May 2012 16:30:46 +0200

uwsgi (1.2.3+dfsg-1) unstable; urgency=low

  * New upstream release.
  * debian/uwsgi.init.d
     - Remove spurious no-op command in init script, thanks to
       Jean-Baptiste Quenot.
  * Use dh_python3 for python3-uwsgidecorators. (Closes: #672193)
  * debian/rules
     - Include Hardening options in CFLAGS, CPPFLAGS and LDFLAGS.

 -- Janos Guljas <janos@resenje.org>  Thu, 10 May 2012 17:14:22 +0200

uwsgi (1.2+dfsg-1) unstable; urgency=low

  * New upstream release.

 -- Janos Guljas <janos@resenje.org>  Mon, 30 Apr 2012 17:35:22 +0200

uwsgi (1.1.2+dfsg-1) unstable; urgency=low

  * New upstream release.

 -- Janos Guljas <janos@resenje.org>  Fri, 30 Mar 2012 23:46:24 +0200

uwsgi (1.1.1+dfsg-1) unstable; urgency=low

  * New upstream release (Closes: #664890).
  * Add DM-Upload-Allowed control field.
  * Remove debian/patches/python-3.x-fix.patch as applied upstream.

 -- Janos Guljas <janos@resenje.org>  Thu, 22 Mar 2012 17:32:15 +0100

uwsgi (1.1+dfsg-1) unstable; urgency=low

  * New upstream release.
  * debian/uwsgi-files/init/specific_daemon
     - suppress stderr on do_start_specific_daemon()
  * debian/rules
     - adjust building python2x_plugin.so and python3x_plugin.so
  * Add debian/patches/python-3.x-fix.patch to fix regression introduced
    in 1.1 release.
  * Update debian/copyright Format value. 
  * Bump standards to 3.9.3.

 -- Janos Guljas <janos@resenje.org>  Sat, 17 Mar 2012 21:39:16 +0100

uwsgi (1.0.3+dfsg-1) unstable; urgency=low

  * New upstream version.
  * Adjust rack plugin LD_RUN_PATH patch.