@@ -38,6 +38,10 @@ PYTHON3_MAJOR_VER := 3
 PYTHON_DIST_PACKAGES_DIR = usr/lib/python$(PYTHON_DEFAULT_DOTTED)/dist-packages
 PYTHON3_DIST_PACKAGES_DIR = usr/lib/python3/dist-packages
 
+# Ruby versions
+RUBY_VERS = 1.8 1.9.1
+RUBY_DEFAULT_VER = 1.8
+
 # Search in debian/control for packages with name $(1)% and extract % in list.
 list_pkgname_suffixes = $(strip \
 	$(shell \
@@ -71,7 +75,7 @@ PARTICULARLY_BUILT_UWSGI_PLUGIN_PKGS = \
 	jvm-openjdk-6 jwsgi-openjdk-6 \
 	lua5.1 luajit \
 	$(patsubst %,pyerl-%,$(UWSGI_PLUGIN_PYTHON_PKG_KINDS)) \
-	rack-ruby1.8 rack-ruby1.9.1 fiber
+	rack fiber
 
 ORDINARILY_BUILT_UWSGI_PLUGIN_PKGS := $(filter-out \
 	$(PARTICULARLY_BUILT_UWSGI_PLUGIN_PKGS), $(UWSGI_PLUGIN_PKGS_NAMES))
@@ -161,7 +165,7 @@ clean::
 		for INSTANTIATED_TEMPLATE in $(call files_instantiated_in_debian_dir, \
 			uwsgi-plugin-, \
 			$(ORDINARILY_BUILT_UWSGI_PLUGIN_PKGS) \
-				lua5.1 luajit rack-ruby1.8 rack-ruby1.9.1, \
+				lua5.1 luajit rack, \
 			.$${TEMPLATE_TYPE} \
 		); do \
 			if [ -f $(CURDIR)/debian/uwsgi-plugin.$${TEMPLATE_TYPE}.in ]; then \
@@ -383,15 +387,27 @@ debian/stamp-plugin-lua5.1 debian/stamp-plugin-luajit:
 	touch $@
 
 # Build rack_ruby18_plugin.so/rack_ruby191_plugin.so
-debian/stamp-plugin-rack-ruby1.8 debian/stamp-plugin-rack-ruby1.9.1:
+debian/stamp-plugin-rack:
 	$(eval PLUGIN_NAME = $(call pkg_name_to_plugin_name, \
 		$(subst stamp-plugin-,,$(notdir $@)) \
 	))
-	UWSGICONFIG_RUBYPATH=/usr/bin/$(call target_name_tail, $@) \
-	$(PYTHON) $(UWSGI_BUILDER) \
-		--plugin $(CURDIR)/$(UWSGI_PLUGINS_SRC_DIR)/rack \
-		         $(CURDIR)/debian/buildconf/uwsgi-plugin.ini \
-		         $(PLUGIN_NAME)
+	for RUBY_VER in $(RUBY_VERS); do \
+		UWSGICONFIG_RUBYPATH=/usr/bin/ruby$${RUBY_VER} \
+		$(PYTHON) $(UWSGI_BUILDER) \
+		    --plugin $(CURDIR)/$(UWSGI_PLUGINS_SRC_DIR)/rack \
+		             $(CURDIR)/debian/buildconf/uwsgi-plugin.ini \
+		             rack_ruby$$(echo $${RUBY_VER} | tr -d .); \
+	done
+	touch $@
+
+# Build greenlet plugin
+debian/stamp-plugin-greenlet-python:
+	for PYTHON_VERSION in $(PYTHON_VERS_DOTTED); do \
+		$(PYTHON)$${PYTHON_VERSION} $(UWSGI_BUILDER) \
+			--plugin $(CURDIR)/$(UWSGI_PLUGINS_SRC_DIR)/greenlet \
+			         $(CURDIR)/debian/buildconf/uwsgi-plugin.ini \
+			         greenlet_python$$(echo $${PYTHON_VERSION} | tr -d .); \
+	done
 	touch $@
 
 # Install uwsgi-plugin-% package for ordinarily built uWSGI plugin
@@ -530,7 +546,7 @@ install/uwsgi-plugin-lua5.1 install/uwsgi-plugin-luajit::
 		$(CURDIR)/uwsgi_$(PLUGIN_NAME) \
 		> $(CURDIR)/debian/uwsgi_$(PLUGIN_NAME).1
 
-install/uwsgi-plugin-rack-ruby1.8 install/uwsgi-plugin-rack-ruby1.9.1::
+install/uwsgi-plugin-rack::
 	$(eval PLUGIN_NAME = $(call pkg_name_to_plugin_name, \
 		$(subst uwsgi-plugin-,,$(notdir $@)) \
 	))
@@ -539,16 +555,9 @@ install/uwsgi-plugin-rack-ruby1.8 install/uwsgi-plugin-rack-ruby1.9.1::
 	)
 	for TEMPLATE_TYPE in postinst prerm; do \
 		sed \
-			-e 's/@@ruby_kind@@/$(subst uwsgi-plugin-rack-,,$(notdir $@))/g' \
-			-e 's/@@plugin_name@@/$(PLUGIN_NAME)/g' \
-			-e 's/@@plugin_alternatives_priority@@/$(PLUGIN_PRIORITY)/g' \
+			-e 's/@@available_ruby_versions_dotless@@/$(subst .,,$${RUBY_VERS})/g' \
+			-e 's/@@default_ruby_version_dotless@@/$(subst .,,$${RUBY_DEFAULT_VER})/g' \
 				< $(CURDIR)/debian/uwsgi-plugin-rack.$${TEMPLATE_TYPE}.in \
-				> $(CURDIR)/debian/$(cdbs_curpkg).$${TEMPLATE_TYPE}; \
-	done
-	for TEMPLATE_TYPE in install links manpages; do \
-		sed \
-			-e 's/@@plugin_name@@/$(PLUGIN_NAME)/g' \
-				< $(CURDIR)/debian/uwsgi-plugin.$${TEMPLATE_TYPE}.in \
 				> $(CURDIR)/debian/$(cdbs_curpkg).$${TEMPLATE_TYPE}; \
 	done
 	ln -sf $(CURDIR)/uwsgi-core-local $(CURDIR)/uwsgi_$(PLUGIN_NAME)
